Fix spacing issue with time
Reduced time font and repositioned due some times falling off the side of the screen. Example 10: 3A would not fit at previous font size and position.

--- a/hex-clock/resources/styles.css
+++ b/hex-clock/resources/styles.css
@@ -48,18 +48,18 @@
   text-length: 80;
   text-anchor: start;
   x: 4%;
-  y: 57%;
+  y: 56%;
   fill: aqua;
   text-decoration: underline;
 }
 
 #digitalClockLabel {
-  font-size: 100;
+  font-size: 90;
   font-family: FBNucleon-Bold;
   text-length: 80;
   text-anchor: start;
-  x: 28%;
-  y: 57%;
+  x: 27%;
+  y: 56%;
   fill: aqua;
 }
 
